--- a/scripts/package.json
+++ b/scripts/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "ethers": "^5.8.0",
-    "openai": "^4.91.1"
+    "he": "^1.2.0",
+    "openai": "^4.91.1",
+    "xml2js": "^0.6.2"
   }
 }
